...
    );
  }
}

class AppStrings {
  static const String appName = '奶点记';
  static const String history = '喂奶记录';
  static const String cancel = '取消';
  static const String futureTimeError = '不能选择未来的时间';
  static const String addFeedTitle = '添加喂奶记录';
}

class AppDefaults {
...
